# CrewAI_Flows

./: README.md  requirements.txt
basic-flows/: basic_flow.py
crewai-with-flows/demo_flow/: poem.txt  pyproject.toml
crewai-with-flows/demo_flow/src/demo_flow/: main.py
crewai-with-flows/demo_flow/src/demo_flow/crews/poem_crew/: poem_crew.py
crewai-with-flows/demo_flow/src/demo_flow/crews/poem_crew/config/: agents.yaml
