[project]
name = "demo_flow"
version = "0.1.0"
description = "demo-flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[google-genai,tools]==1.6.0",
]

[project.scripts]
kickoff = "demo_flow.main:kickoff"
run_crew = "demo_flow.main:kickoff"
plot = "demo_flow.main:plot"
run_with_trigger = "demo_flow.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
